syntax = 'proto3';
package armadaevents;
option csharp_namespace = "ArmadaProject.Io.ArmadaEvents";

import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/api/networking/v1/generated.proto";
import "google/protobuf/timestamp.proto";
import "k8s.io/apimachinery/pkg/api/resource/generated.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// Armada state transition model
//
// The central concepts are:
// - Jobs (i.e., a request for Armada to run a particular application).
//   Each job consists of a set of Kubernetes resources (e.g., one or more pod specs, a service, and an ingress).
//   One resource is labeled the main resource, and the job is considered to have finished when that resource exits.
//   Each job is part of exactly one job set.
// - Job sets (i.e., a set of jobs that can be controlled and monitored as a unit).
//   Each job set has a unique user-supplied name, which is namespaced by queue.
//   Job sets are implicit in the sense that they consist of all jobs submitted with the same job set name.
// - Job runs (i.e., an attempt by Armada to run a particular job).
//   There may be several job runs associated with each job, representing multiple attempts to run the job.
//
// This is the sequence of operations associated with running a set of jobs in Armada:
// 1. Submit a job, which is composed of a set of Kubernetes resources. The request must include a job set name.
//    Armada returns a job id. Repeat this step to run multiple jobs in the same set.
// 2. Each job is added to Armada's queue. For each job, once it reaches the front of the queue
//    it is leased to an executor (of which there may be many), which is responsible for running the job
//    in a Kubernetes cluster. Executors map one-to-one to Kubernetes clusters.
// 3. The executor attempts to run the job. Each such attempt is referred to as a job run.
//    There may be several job runs associated with a job (e.g., if a run failed).
// 4. Armada will report the exit status of each job as they finish.
//
// The state transition model of each job is:
// [pending <=> leased => succeeded, failed]
//
// The state transition rules for each job are:
// - After being submitted, the job is pending until it has been leased to an executor by the scheduler.
// - The job transitions to the failed state if it cannot be leased to an executor
//   (e.g., if the job requests more resources than what is available in any cluster).
// - The job is in the leased state while it is leased to at least one executor.
// - The job transitions from leased to succeeded if all runs have finished and at least one succeeded
//   (i.e., the application exited with a zero exit code).
// - The job transitions from leased to pending if all runs failed and the error is considered recoverable
//   (e.g., if the pod was preempted).
// - The job transitions from leased to failed if all runs failed and the error is considered non-recoverable
 //  (e.g., if the the application exited with a non-zero exit code).
//
// The state transition model of each job run is:
// [pending => assigned => running => succeeded, failed]
//
// The state transition rules for each job run are:
// - Each job run starts when the job is assigned to an executor (by the scheduler),
//   at which point it is in the pending state.
// - While in the pending state, the executor attempts to assign the job to a node,
//   at which point the run transitions to the assigned state.
// - The run transitions to the running state once the application is running on the node it was assigned to.
// - From the running state, the run transitions to either the succeeded or failed state
//   (depending on the application exit code).
// - The run may transition to the failed state from any of the other states
//   (e.g., due to a lease expiry or due to being preempted).

// Message representing a sequence of state transitions.
// This is the only message type that should ever be published to the log.
message EventSequence {
    // List of possible events, i.e., state transitions.
    message Event {
        google.protobuf.Timestamp created = 18 [(gogoproto.stdtime) = true];
        oneof event {
            SubmitJob submitJob = 1;
            ReprioritiseJob reprioritiseJob = 2;
            ReprioritiseJobSet reprioritiseJobSet = 3;
            ReprioritisedJob reprioritisedJob = 4;
            CancelJob cancelJob = 5;
            CancelJobSet cancelJobSet = 6;
            CancelledJob cancelledJob = 7;
            JobSucceeded jobSucceeded = 8;
            JobErrors jobErrors = 9;
            JobRunLeased jobRunLeased = 10;
            JobRunAssigned jobRunAssigned= 11;
            JobRunRunning jobRunRunning= 12;
            JobRunSucceeded jobRunSucceeded = 13;
            JobRunErrors jobRunErrors = 14;
            JobDuplicateDetected jobDuplicateDetected = 15;
            StandaloneIngressInfo standaloneIngressInfo = 16;
            ResourceUtilisation resourceUtilisation = 17;
        }
    }
    // The system is namespaced by queue, and all events are associated with a job set.
    // Hence, these are included with every message.
    string queue = 1;
    // Each job set has a unique name.
    string job_set_name = 2;
    // Id of the user submitting the message. Is passed on to Kubernetes.
    // Leave empty for messages generated by Armada itself.
    string user_id = 3;
    // List of groups the user is member of. Is passed on to Kubernetes.
    repeated string groups = 4;
    // For efficiency, we bundle several events (i.e., state transitions) in a single log message.
    repeated Event events = 5;
}

// Resource usage of a particular k8s object created as part of a job.
message ResourceUtilisation {
    Uuid run_id = 1;
    Uuid job_id = 2;
    KubernetesResourceInfo resource_info = 3;
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> max_resources_for_period = 4 [(gogoproto.nullable) = false];
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> total_cumulative_usage = 5 [(gogoproto.nullable) = false];
}

// A UUID, encoded in accordance with section 4.1.2 of RFC 4122
// (technically equivalent to ITU-T Rec. X.667 and ISO/IEC 9834-8).
// As of March 2022, this seems to be the most efficient way to include UUIDs in proto messages; see
// https://github.com/protocolbuffers/protobuf/issues/2224#issuecomment-760635430
message Uuid {
	// The high 64 bits of the UUID - MSB -> LSB: time_low (32 bits) | time_mid (16 bits) | time_hi_and_version (16 bits).
	fixed64 high64 = 1;
	// The low 64 bits of the UUID - MSB -> LSB: clock_seq_hi_and_reserved (8 bits) | clock_seq_low (8 bits) | node (48 bits).
	fixed64 low64 = 2;
}

// A request to run an Armada job. Each job consists of a set of Kubernetes objects,
// one of which is the main object (typically a pod spec.) and has a priority associated with it.
// When the main object exits, all other objects are cleaned up.
// The priority, together with the queue the job is submitted to, determines the order in which jobs are run.
message SubmitJob {
    // Each application may be run multiple times. This id uniquely identifies this job.
    Uuid job_id = 1;
    // User-provided id used for server-side deduplication.
    // I.e., jobs submitted with the same deduplication_id as an existing job are discarded.
    // TODO: If we can deduplicate at the API endpoint, we don't need this on the log.
    string deduplication_id = 2;
    // Priority of this job. Measured relative to other jobs in the same queue.
    uint32 priority = 3;
    // Shared ObjectMeta for all Kubernetes objects in this job.
    // If provided, the namespace therein is used for all objects that do not explicitly specify another.
    // And the labels and annotations therein are applied to all objects part of the job.
    ObjectMeta objectMeta = 4;
    // Main object that determines when an application has finished.
    KubernetesMainObject mainObject = 5;
    // Set of additional Kubernetes objects to create as part of the job.
    repeated KubernetesObject objects = 6;
    // Maximum lifetime of the job in seconds. Zero indicates an infinite lifetime.
    uint32 lifetime = 7;
    // If true, the job is run at most once, i.e., at most one job run will be created for it.
    // If false, the job may be re-leased on failure, which may cause the job to run more than once
    // (e.g., if a job run succeeds but the executor fails before it can report job success).
    bool atMostOnce = 8;
    // If true, Armada may preempt the job while running.
    bool preemptible = 9;
    // If true, Armada may optimistically run several instances of the job concurrently
    // (typically on different clusters).
    // If false, a new job run may only be created once Armada is certain that all existing runs have finished.
    bool concurrencySafe = 10;
}

// Kubernetes objects that can serve as main objects for an Armada job.
message KubernetesMainObject {
    ObjectMeta objectMeta = 1;
    oneof object {
        PodSpecWithAvoidList pod_spec = 2;
    }
}

// Kubernetes objects that can be created as part of an Armada.
message KubernetesObject {
    ObjectMeta objectMeta = 1;
    oneof object {
        PodSpecWithAvoidList pod_spec = 2;
        k8s.io.api.networking.v1.IngressSpec ingress = 3;
        k8s.io.api.core.v1.ServiceSpec service = 4;
        k8s.io.api.core.v1.ConfigMap configMap = 5;
    }
}

// Auxiliary information needed to instantiate the object in Kubernetes.
// Inspired by the Kubernetes ObjectMeta object; see:
// https://github.com/kubernetes/apimachinery/blob/master/pkg/apis/meta/v1/generated.proto#L641
message ObjectMeta {
    // Unique id of the executor responsible for the Kubernetes cluster that created the object.
    // Is set by the executor on object creation.
    string executor_id = 1;
    string namespace = 2;
    string name = 3;
    // Unique id assigned to the object by Kubernetes (typically a 128-bit UUID).
    // Should be left empty on job creation, but should be set, e.g., when in the JobRunRunning message.
    // Stored as a string because Kubernetes doesn't always use UUIDs; see
    // https://github.com/kubernetes/apimachinery/blob/master/pkg/types/uid.go#L19
    string kubernetes_id = 4;
    map<string, string> annotations = 5;
    map<string, string> labels = 6;
}

// Kubernetes pod spec. with a bundled list of pods to avoid scheduling the pod to.
message PodSpecWithAvoidList {
    k8s.io.api.core.v1.PodSpec pod_spec = 1;
    // List of nodes to avoid scheduling this pod on.
    // TODO: Could this be done with selectors, taints, etc?
    repeated string node_avoidlist = 2;
}

// Set the priority of a particular job.
message ReprioritiseJob {
    Uuid job_id = 1;
    uint32 priority = 2;
}

// Set the priority of all jobs part of a job set.
// This sets the priority of all jobs in the job set currently in the queued state.
message ReprioritiseJobSet {
    uint32 priority = 1;
}

// Generated by the scheduler in response to ReprioritiseJob and ReprioritiseJobSet.
// One such message is generated per job that was re-prioritised and includes the new priority.
message ReprioritisedJob {
    Uuid job_id = 1;
    uint32 priority = 2;
}

// A request to cancel a particular job.
// This will cancel all runs (preempting it if running) for the job (i.e., move them to the failed state)
// and then cancel job itself (i.e., move it to the failed state).
message CancelJob {
    Uuid job_id = 1;
}

// Request to cancel all jobs in a job set.
message CancelJobSet {
}

// Generated by the scheduler in response to CancelJob and CancelJobSet.
// One such message is generated per job that was cancelled.
message CancelledJob {
    Uuid job_id = 1;
}

message JobSucceeded {
    Uuid job_id = 1;
    // Runtime information, e.g., which node the job is running on, its IP address etc,
    // for each resource created for the job run.
    // TODO: remove this once we have fixed the external api
    repeated KubernetesResourceInfo resourceInfos = 2;
}

// Indicates that a job has been leased to a cluster by the Armada scheduler.
message JobRunLeased {
    Uuid run_id = 1;
    Uuid job_id = 2;
    // Each cluster is represented by an executor.
    string executor_id = 3;
}

// Indicates that a job has been assigned to nodes by Kubernetes.
message JobRunAssigned {
    Uuid run_id = 1;
    Uuid job_id = 2;
    // Runtime information, e.g., which node the job is running on, its IP address etc,
    // for each resource created for the job run.
    // Included here and in JobRunRunning for compatibility with legacy messages.
    repeated KubernetesResourceInfo resourceInfos = 3;
}

// Indicates that the resources required by the job have been created and that the job is now running.
message JobRunRunning {
    Uuid run_id = 1;
    Uuid job_id = 2;
    // Runtime information, e.g., which node the job is running on, its IP address etc,
    // for each resource created for the job run.
    repeated KubernetesResourceInfo resourceInfos = 3;
}

// Message containing runtime information about some resource created for a job.
message KubernetesResourceInfo {
    ObjectMeta objectMeta = 1;
    oneof info {
        PodInfo podInfo = 2;
        IngressInfo ingressInfo = 3;
    }
}

// Runtime information of a pod.
message PodInfo {
    string node_name = 1;
    int32 pod_number = 2;
}

// Runtime information of an ingress.
message IngressInfo {
    // TODO: Why a node name?
    string node_name = 1;
    // TODO: Why a map?
    map<int32, string> ingress_addresses = 2;
}

// For sending details associated with a created ingress.
// Used for compatibility with legacy messages, which send ingress info as its own message.
// Later, this info should be bundled with the JobRunRunning message.
message StandaloneIngressInfo {
    Uuid run_id = 1;
    Uuid job_id = 2;
    // ObjectMeta associated with the ingress.
    ObjectMeta objectMeta = 3;
    map<int32, string> ingress_addresses = 4;
    // The legacy message bundles info associated with the pod.
	string node_name = 5;
	int32 pod_number = 6;
	string pod_name = 7;
	string pod_namespace = 8;
}

// Indicates that the job finished successfully (i.e., in the expected manner).
message JobRunSucceeded {
    Uuid run_id = 1;
    Uuid job_id = 2;
    // Runtime information, e.g., which node the job is running on, its IP address etc,
    // for each resource created for the job run.
    // TODO: remove this once we have fixed the external api
    repeated KubernetesResourceInfo resourceInfos = 3;
}

// Message containing a set of errors associated with a particular job.
// Contains a flag, which if set to true indicates that the job has failed.
// Otherwise, this message represents a set of errors from which the system has recovered.
message JobErrors {
    Uuid job_id = 1;
    // A set of errors that occurred within some context.
    repeated Error errors = 2;
}

// Message containing a set of errors associated with a particular job run.
// Contains a flag, which if set to true indicates that the job run has failed.
// Otherwise, this message represents a set of errors from which the system has recovered.
//
// Because each error may specify a parent error, the set of errors form a tree.
//
// Services may listen for these messages to obtain realtime information about errors associated with jobs.
message JobRunErrors {
    Uuid run_id = 1;
    Uuid job_id = 2;
    // A set of errors that occurred within some context.
    repeated Error errors = 3;
}

// Represents a failure that took place in the course of a job run (i.e., an attempt to run a job).
// Each failure is either a resource failure or a system-level failure.
// Resource failures correspond to a problem with a specific Kubernetes resource
// (e.g., if a container terminates with a non-zero exit code).
// System-level failure messages are created by the executor (e.g., a failure by the executor to write to Kubernetes).
//
// This message may only be published to the log as part of a JobRunError message.
// TODO: Check if the container status contained any useful info for non-failed containers.
message Error {
    // If true, this error represents an unrecoverable failure and Armada has given up on this job or job run.
    bool terminal = 1;
    // Additional information for this particular combination of component and error. May be set to nil.
    oneof reason {
        KubernetesError kubernetesError = 2;
        ContainerError containerError = 3;
        ExecutorError executorError = 4;
        PodUnschedulable podUnschedulable = 5;
        LeaseExpired leaseExpired = 6;
        MaxRunsExceeded maxRunsExceeded = 7;
        PodError podError = 8;
        PodLeaseReturned podLeaseReturned = 9;
        PodTerminated podTerminated = 10;
    }
}

// Represents an error associated with a particular Kubernetes resource.
message KubernetesError {
    // Type of Kubernetes resource (e.g., ingress).
    string resourceType = 1;
    // Id assigned to the resource by Kubernetes.
    Uuid resourceId = 2;
}

// Indicates one or more of the containers in the pod failed.
message PodError {
	// This ObjectMeta identifies the Pod.
    ObjectMeta objectMeta = 1;
    string message = 2;
    string node_name = 3;
    int32 pod_number = 4;
    repeated ContainerError containerErrors = 5;
}

message ContainerError {
    // These messages represent the reason for why the container failed.
    // We use empty messages to give the option of adding fields specific to each cause later.
    message OutOfMemory {

    }
    message ContainerError {

    }
    message Evicted {

    }
    message DeadlineExceeded {

    }
    // this ObjectMeta identifies the container
    ObjectMeta objectMeta = 1;
    // Exit code of the application running in the container.
    int32 exit_code = 2;
    // Corresponds to v1.ContainerStateTerminated.Message
    string message = 3;
    // Corresponds to v1.ContainerStateTerminated.Reason
    string reason = 4;
    // Reason reported by Kubernetes.
    oneof KubernetesReason {
        OutOfMemory outOfMemory = 5;
        Error error = 6;
        Evicted evicted = 7;
        DeadlineExceeded deadlineExceeded = 8;
    }
}

// Indicates that the pod could not be scheduled for some reason.
message PodLeaseReturned {
    ObjectMeta objectMeta = 1;
    string message = 2;
    int32 pod_number = 3;
}

// Indicates that the lease on the job that the pod was part of could not be renewed.
// If this happens, the executor deletes the pod and generates a JobRunError with this message as the reason.
message PodTerminated {
	// This ObjectMeta identifies the Pod.
    ObjectMeta objectMeta = 1;
    string message = 2;
    string node_name = 3;
    int32 pod_number = 4;
}

message ExecutorError {
}

message PodUnschedulable {
	// this ObjectMeta identifies the Pod
    ObjectMeta objectMeta = 1;
    string message = 2;
    string node_name = 3;
    int32 pod_number = 4;
}

message LeaseExpired {
}

message JobPreempted {
}

message MaxRunsExceeded {
}

// Generated by the scheduler whenever it detects a SubmitJob message that includes a previously used deduplication id
// (i.e., when it detects a duplicate job submission).
message JobDuplicateDetected {
    Uuid new_job_id = 1;
    Uuid old_job_id = 2;
}

message SeqUpdate{
    int64 jobsetId = 1;
    int64 seqNo = 2;
}

message SeqUpdates{
    repeated SeqUpdate updates = 1;
}

message DatabaseSequence{
    EventSequence eventSequence = 1;
}